[tool.poetry]
name = "workout-calendar-app-backend"
version = "0.1.0"
description = ""
authors = ["Cindy Vo <cindyhvo824@gmail.com>"]
readme = "README.md"
packages = [{include = "workout_calendar_app_backend"}]

[tool.poetry.dependencies]
python = "^3.10"
fastapi = "^0.95.0"
uvicorn = {extras = ["standard"], version = "^0.21.1"}
gunicorn = "^20.1.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
